--- a/views/privada/cambiar.html
+++ b/views/privada/cambiar.html
@@ -39,13 +39,12 @@
                             <div class="col-12">
                             </div>
                             <div class="col-12">
-                                <form id="logInForm" method="post">
                                     <div id="Form_login">
                                         <label for="exampleInputPassword1" class="form-label">
-                                            <h2>Nueva contraseña:</h2>
+                                            <h2>Nueva contraseña</h2>
                                         </label>
                                         <input type="password" class="form-control" id="contrauno" size="40"
-                                            name="passwordone" maxlength="70" required pattern="(?=^.{8,70}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$"
+                                            name="password_user" maxlength="70" required autocomplete="off" pattern="(?=^.{8,70}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$"
                                             title="Debe contener al menos una mayúscula, una minúscula, un número y un caracter especial">
                                     </div>
                                     <div id="Form_login">
@@ -53,15 +52,14 @@
                                             <h2>Confirme la contraseña</h2>
                                         </label>
                                         <input type="password" class="form-control" id="contrados" size="40"
-                                            name="password" maxlength="70" required pattern="(?=^.{8,70}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$"
+                                            name="password" maxlength="70" required autocomplete="off" pattern="(?=^.{8,70}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$"
                                             title="Debe contener al menos una mayúscula, una minúscula, un número y un caracter especial">
                                     </div>
                                     <div class="col-12 d-flex justify-content-center">
-                                        <button class="btn btn-dark logIndButton" id="btnmenu" type="button" onclick="cambiarContraseña()">
-                                                Cambiar contraseña:</button>
+                                        <button class="btn btn-dark logIndButton" id="btnmenu" type="submit" onclick="cambiarContraseña()">
+                                                Cambiar contraseña</button>
                                     </div>
                                     <a href="index.html" id="recuperar">Página de registro</a>
-                                </form>
                             </div>
                         </div>
                     </div>
@@ -73,11 +71,11 @@
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
                     <div class="modal-header" id="formHeader">
-                        <h5 class="modal-title">Proceso fallido</h5>
+                        <h5 class="modal-title">Error al iniciar sesión</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        Ha habido un error al restaurar la contraseña
+                        Verifique que las contreseñas sean iguales
                     </div>
                     <div class="modal-footer">
                         <button class="btn btn-primary" data-bs-dismiss="modal" id="btnmenu">Aceptar</button>
@@ -85,7 +83,24 @@
                 </div>
             </div>
         </div>
-        <!-- Modal de CORREO ENVIADO -->
+        <!-- Modal de PROCESO FALLIDO -->
+        <div class="modal fade" id="error_proceso" tabindex="-1">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header" id="formHeader">
+                        <h5 class="modal-title">Error</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                       Salió mal
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-primary" data-bs-dismiss="modal" id="btnmenu">Aceptar</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Modal de PROCESO COMPLETADO -->
         <div class="modal fade" id="buen_proceso" tabindex="-1">
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
